ain.cpp store.h return.h moviefactory.h movie.h inventory.h history.h hashtable.h drama.h customer.h comedy.h classic.h borrow.h action.h store.cpp customer.cpp hashtable.cpp hashEntry.h moviefactory.cpp)cmake_minimum_required(VERSION 3.9)
project(PRJ_4)

set(CMAKE_CXX_STANDARD 11)

add_executable(PRJ_4 m